styles/globals.scss
@tailwind base;
@tailwind components;

@import 'buttons';
@import 'forms';

@tailwind utilities;

@layer base {
  html {
    font-size: clamp(16px, 1.75vw, 20px);
  }
  
  h1,
  .h1 {
    @apply mb-6 text-3xl font-bold md:text-4xl;
  }
  
  h2,
  .h2 {
    @apply mb-4 text-xl font-bold;
  }
  
  h3,
  .h3 {
    @apply mb-1.5 text-lg font-bold;
  }

  strong {
    @apply font-bold;
  }

  small {
    @apply text-sm;
  }
}

@layer utilities {
  .container {
    @apply w-full max-w-2xl p-4 md:p-8;
  }

  .container-sm {
    @apply w-full max-w-xl p-4 md:p-8;
  }

  .container-fluid {
    @apply w-full p-4 md:p-8;
  }

  .scrollbar-hidden {
    scrollbar-width: none;
    &::-webkit-scrollbar {
      display: none;
    }
  }

  .text-vertical {
    writing-mode: vertical-rl;
    text-orientation: mixed;
  }

  .clip-rounded-t {
    clip-path: inset(0 0 0 0 round 5px 5px 0 0);
  }
}

